2008-06-04  Peter Hedwig  <peter@affenbande.org>

	* term/lua/gnuplot-tikz.lua term/lua/gnuplot-tikz.help
	share/LaTeX/gnuplot-lua-tikz.sty: Update the lua terminal scripts to
	accept a font size in the second slot of a font descriptor string.

2009-06-04  Ethan A Merritt  <merritt@u.washington.edu>

	* src/mouse.c:  The following test script triggered multiple problems.
	                "set multi; set x2data time; set x2tics; unset multi;"
	- initialize mouse_x, mouse_y to -1;  test before using
	- initialize mouse values with VERYLARGE (replace magic number 1e38)
	- xDateTimeFormat: do not attempt to convert VERYLARGE to a date
	Bugfix.

2009-06-04  Shigeharu Takeno  <shige@iee.niit.ac.jp>

	* term/gd.trm:  Remove redundant section in gif help text.

2009-06-03  Ethan A Merritt  <merritt@u.washington.edu>

	* src/term.c (enhanced_recursion):  Enhanced text markup applied to a
	single multibyte character was producing garbage.  Fix this for UTF-8.
	Other multibyte encoding may still trigger this problem.
	Bugfix #2800539

2009-05-31  Ethan A Merritt  <merritt@u.washington.edu>

	* src/axis.c (get_position_default):  Ugly hack to work around
	ambiguous syntax if "offset x,y" is the last thing in a plot clause.
	Bugfix #2726798

2009-05-31  Shigeharu Takeno  <shige@iee.niit.ac.jp>

	* docs/term-ja.diff docs/gnuplot-ja.doc:  Sync to rev.1.568

	* docs/gnuplot.doc term/gd.trm: typos in documentation

2009-05-31  Ethan A Merritt  <merritt@u.washington.edu>

	Start branch for Release 4.4

	New stuff, i.e. code other than bugfixes or things identified as 
	being desireable for version 4.4, should be commited in the
	development branch only (this one).

	Bugfixes should be applied to both the development branch 4.3
	(this one) and the new one (branch-4-4-stable).  When we release
	4.4, we will bump the version number of the development branch to 4.5.

2009-05-31  Ethan A Merritt  <merritt@u.washington.edu>
